...
"back" = "back";

/* No comment provided by engineer. */
"Back" = "Back";

/* No comment provided by engineer. */
"Background" = "Background";

/* No comment provided by engineer. */
"background_name" = "background_name";

/* No comment provided by engineer. */
"background_number" = "background_number";
...
"Camera Roll" = "Camera Roll";

/* No comment provided by engineer. */
"Can't restart project!" = "Can't restart project!";

/* No comment provided by engineer. */
"Cancel" = "Cancel";

/* bluetooth */
"Cannot connect to device, please try resetting the device and try again." = "Cannot connect to device, please try resetting the device and try again.";

/* bluetooth */
"Cannot connect to device. The device is not responding." = "Cannot connect to device. The device is not responding.";
...
"Continue" = "Continue";

/* No comment provided by engineer. */
"Control" = "Control";

/* No comment provided by engineer. */
"Copy" = "Copy";

/* No comment provided by engineer. */
"Copy Brick" = "Copy Brick";

/* No comment provided by engineer. */
"Copy Looks" = "Copy Looks";
...
"December" = "December";

/* No comment provided by engineer. */
"degrees" = "degrees";

/* No comment provided by engineer. */
"Delete" = "Delete";

/* No comment provided by engineer. */
"Delete Backgrounds" = "Delete Backgrounds";

/* No comment provided by engineer. */
"Delete Brick" = "Delete Brick";
...
"Delete Looks" = "Delete Looks";

/* No comment provided by engineer. */
"Delete Loop" = "Delete Loop";

/* No comment provided by engineer. */
"Delete Objects" = "Delete Objects";

/* No comment provided by engineer. */
"Delete Project" = "Delete Project";

/* No comment provided by engineer. */
"Delete Projects" = "Delete Projects";
...
"Delete this look" = "Delete this look";

/* No comment provided by engineer. */
"Delete this Loop?" = "Delete this Loop?";

/* No comment provided by engineer. */
"Delete this object" = "Delete this object";

/* No comment provided by engineer. */
"Delete this project" = "Delete this project";

/* No comment provided by engineer. */
"Delete this Script?" = "Delete this script?";
...
"Delete this sound" = "Delete this sound";

/* No comment provided by engineer. */
"Deletion Mode" = "Deletion Mode";

/* No comment provided by engineer. */
"Description" = "Description";

/* No comment provided by engineer. */
"Details" = "Details";

/* bluetooth */
"Device disconnected." = "Device disconnected.";
...
"Do you really want to delete the current drawing?" = "Do you really want to delete the current drawing?";

/* paint */
"Do you want to save the changes" = "Do you want to save the changes";

/* No comment provided by engineer. */
"Done" = "Done";

/* No comment provided by engineer. */
"Download" = "Download";

/* No comment provided by engineer. */
"Download successful" = "Download successful";
...
"Draw new image" = "Draw new image";

/* No comment provided by engineer. */
"Duration" = "Duration";

/* No comment provided by engineer. */
"Edit" = "Edit";

/* Action sheet menu title */
"Edit Background" = "Edit Background";

/* Action sheet menu title */
"Edit Backgrounds" = "Edit Backgrounds";
...
"Enter your list name here..." = "Enter your list name here...";

/* Placeholder for message input field */
"Enter your message here..." = "Enter your message here...";

/* Placeholder for add object-name input field */
"Enter your object name here..." = "Enter your object name here...";

/* Placeholder for project-description input field */
"Enter your project description here..." = "Enter your project description here...";

/* Placeholder for project-name input field */
"Enter your project name here..." = "Enter your project name here...";
...
"Help" = "Help";

/* No comment provided by engineer. */
"Hide" = "Hide";

/* No comment provided by engineer. */
"Hide Details" = "Hide Details";

/* No comment provided by engineer. */
"Hide variable" = "Hide variable";

/* No comment provided by engineer. */
"Hmmmm!" = "Hmmmm!";
...
"Monday" = "Monday";

/* No comment provided by engineer. */
"month" = "month";

/* No comment provided by engineer. */
"More" = "More";

/* No comment provided by engineer. */
"More information" = "More information";

/* No comment provided by engineer. */
"Most Downloaded" = "Most Downloaded";
...
"Move Phiro motor forward" = "Move Phiro motor forward";

/* No comment provided by engineer. */
"Move Sounds" = "Move Sounds";

/* Name of the default catrobat project (used as filename!!) */
"My first project" = "My first program";

/* Default title of imported photo from camera (taken by camera) */
"My Image" = "My Image";

/* Title for first (default) object */
"My Object" = "My Object";
...
"October" = "October";

/* No comment provided by engineer. */
"off" = "off";

/* No comment provided by engineer. */
"OK" = "OK";

/* No comment provided by engineer. */
"on" = "on";

/* No comment provided by engineer. */
"only 15 characters allowed" = "only 15 characters allowed";
...
"Please select a project to upload" = "Please select a project to upload";

/* bluetooth */
"Please try resetting the device and try again." = "Please try resetting the device and try again.";

/* No comment provided by engineer. */
"Pocket Code" = "Pocket Code";

/* No comment provided by engineer. */
"Pocket Code for iOS" = "Pocket Code for iOS";

/* No comment provided by engineer. */
"Pocket Code has been started in debug mode." = "Pocket Code has been started in debug mode.";
...
"Registration successful" = "Registration successful";

/* No comment provided by engineer. */
"Remove known devices" = "Remove known devices";

/* No comment provided by engineer. */
"Rename" = "Rename";

/* No comment provided by engineer. */
"Rename image" = "Rename image";

/* No comment provided by engineer. */
"Rename object" = "Rename object";

/* No comment provided by engineer. */
"Rename Project" = "Rename Project";

/* No comment provided by engineer. */
"Rename sound" = "Rename Sound";
...
"Set brightness " = "Set brightness ";

/* No comment provided by engineer. */
"Set color " = "Set color ";

/* No comment provided by engineer. */
"Set description" = "Set description";

/* No comment provided by engineer. */
"Set Phiro light" = "Set Phiro light";

/* No comment provided by engineer. */
"Set size to" = "Set size to";
...
"Settings" = "Settings";

/* No comment provided by engineer. */
"Show" = "Show";

/* No comment provided by engineer. */
"Show Details" = "Show Details";

/* No comment provided by engineer. */
"Show variable" = "Show variable";

/* No comment provided by engineer. */
"size" = "size";
...
"Y: " = "Y: ";

/* No comment provided by engineer. */
"year" = "year";

/* No comment provided by engineer. */
"Yes" = "Yes";

/* No comment provided by engineer. */
"Yesterday" = "Yesterday";

/* No comment provided by engineer. */
"You are also able to build your own apps, remix existing ones and share them with your friends and other exciting people around the world." = "You are also able to build your own apps, remix existing ones and share them with your friends and other exciting people around the world.";
...
