...
}

@objc class ProgramDescriptionViewController: UIViewController {
    @objc weak var delegate: SetProgramDescriptionDelegate?

    private var header: UILabel!
    private var descriptionTextView: UITextView!
    private var descriptionTextViewBottomConstraint: NSLayoutConstraint!

    // MARK: Init
    required init?(coder aDecoder: NSCoder) {
        super.init(coder: aDecoder)
    }
...
